# esp32-component-appfs

./: .clang-format  CMakeLists.txt  Kconfig  Makefile  README.md  appfs.c  idf_component.yml
.github/workflows/: upload_component.yml
bootloader_main/: CMakeLists.txt  appfs_flashfunctions_wrapper.c  appfs_flashfunctions_wrapper.h  bootloader_hooks.h  bootloader_start.c
include/: appfs.h
src/: appfs.c  appfs_vfs.c
tools/: appfs.py  appfs_add_file.py  appfs_extract.py  appfs_generate.py  flash.sh  generate.sh
